# enigma_takehome

./: .gitignore  README.md
my_package/: pyproject.toml  setup.py
my_package/my_package/: functions.py
my_package/my_package.egg-info/: PKG-INFO  SOURCES.txt
my_package/tests/: test_end_2_end.py
notebooks/: factor_analysis.ipynb
